don't re-create 1000 element array's of nsPoints every time the routine is called. r=dcone/sr=sfraser. bug 69101.